# extrator_textos

./: .gitignore  README.md  bd_pje_extrator.py  codex_extrator.py  codex_extrator_v2.py  main.py  pyproject.toml  requirements.txt
scripts/: aumento_dataset _v2.py  aumento_dataset.py  conecta_banco_pje.py  estatisticas_texto.py  exclue_duplicatas.py  extrator_textos_pdf.py  gera_modelos.py  quantidade_workers.py  scrapping_pje.py  verifica_textos.py
utils/: conexao_banco.py  utils.py
