[tool.poetry]
name = "extrator-textos"
version = "0.1.0"
description = "Extrator de textos jurídicos"
authors = ["Marcio de Sousa Freitas <msfreitas@tre-ba.jus.br>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
idna = "3.7"
numpy = "2.0.1"
pandas = "2.2.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.32.3"
six = "1.16.0"
tzdata = "2024.1"
urllib3 = "2.2.2"
pypdf2 = "^3.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
